--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: '3.1'
 
 services:
+  user-api:
+    build: ./user-api/chat-user-api
+    ports:
+      - "8080:8080"
+    environment:
+      MYSQL_HOST: database
+
   database:
     image: mysql
     restart: always
     ports:
-      - 3306:3306
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: db-pass123
       MYSQL_DATABASE: chat-db
